[package]
name = "toolchanger_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
anyhow = "1.0.83"

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }

reqwest = { version = "0.12.8", features = [
    # "rustls-tls",
    # "rustls-tls-native-roots",
    "json",
    "blocking",
] }

egui = "0.31.1"
eframe = { version = "0.31.1", features = ["persistence"] }

bytemuck_derive = ">=1.8.1, <1.9.0"

# tokio = { version = "1.44.1", features = ["full"] }
