[package]
name = "toolchanger_utils"
version = "0.1.0"
edition = "2021"

[features]
default = []
tests = []

[dependencies]

serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }

toml = "0.8.19"

anyhow = "1.0.83"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }

reqwest = { version = "0.12.8", features = [
    # "rustls-tls",
    # "rustls-tls-native-roots",
    "json",
    "blocking",
] }

egui = "0.31.1"
eframe = { version = "0.31.1", features = ["persistence"] }
egui_extras = "0.31.1"

bytemuck_derive = ">=1.8.1, <1.9.0"
# nokhwa = { version = "0.10.7", features = ["input-native", "output-wgpu"] }
nokhwa = { version = "0.10.7", features = ["input-native"] }
# egui-wgpu = "0.31.1"

image = { version = "0.25", default-features = false, features = ["jpeg"] }
opencv = "0.94.3"
crossbeam-channel = "0.5.14"
rayon = "1.10.0"

argmin = { version = "0.10.0", features = ["rayon"] }
argmin-math = { version = "0.4", features = ["ndarray_latest"] }
rand_xoshiro = "0.7.0"
rand = "0.9.0"
argmin-observer-slog = "0.1.0"
ndarray = "0.16.1"

url = "2.5.4"
fast_image_resize = { version = "5.1.2", features = ["image", "rayon"] }

# egui_struct = "0.4.2"
# rust-i18n = "3.1.3"

# enum2egui = "0.3.11"
# egui-probe = { version = "0.8.0", features = ["derive"] }

# tokio = { version = "1.44.1", features = ["full"] }
